Subiendo archivo completo con 600 peliculas

--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -25,8 +25,8 @@
             </div>
 
             <div class="home">
-                <h1 id="title">Search in github</h1>
-                <p>Looking for further info on any repo?</p>
+                <h1 id="title">Search any movie</h1>
+                <p>Unfortunately, at the moment we only have movies between 2002-2021</p>
 
                 <div class="left-arrow">
                     <a href="gallery.html"><i class="fa-solid fa-angle-left"></i></a>
@@ -34,7 +34,7 @@
 
                 <div class="search-bar-container" id="search-bar-container">
                     <div class="search-bar">
-                        <input id="search-bar" type="text" name="search" placeholder="Search by username ..." required autocomplete="off" onchange="showData()">
+                        <input id="search-bar" type="text" name="search" placeholder="Search by word, name, year, etc ..." required autocomplete="off" onchange="showData()">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
                     <div class="search-result-container" id="search-result-container">
