Añadiendo opcion añadir a movielist

--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -48,7 +48,7 @@
                             <div class="left-content">
                                 <img src="https://avatars.githubusercontent.com/u/97603106?v=4">
                             </div>
-                            <div class="right-content">
+                            <div id="right-content" class="right-content">
                                 <p id="full-name">migueltorresvalls/demo-clases</p>
                                 <a href="" id="name">demo-clases</a>
                             </div>
