--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -34,7 +34,7 @@
 
                 <div class="search-bar-container" id="search-bar-container">
                     <div class="search-bar">
-                        <input id="search-bar" type="text" name="search" placeholder="Search by word, name, year, etc ..." required autocomplete="off" onchange="showData()">
+                        <input id="search-bar" type="text" name="search" placeholder="Search by word, name, year, etc ..." required autocomplete="off" onchange="showMovies()">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
                     <div class="search-result-container" id="search-result-container">
