--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -19,25 +19,46 @@
                 <ul>
                     <a id="home" href="index.html"><li><i class="fa-solid fa-bars"></i></li></a>
                     <a id="inbox" href="inbox.html"><li><i class="fa-solid fa-inbox"></i></li></a>
-                    <a id="portfolio" href="gallery.html"><li><i class="fa-solid fa-photo-film"></i></li></a>
-                    <a id="grid" href=""><li><i class="fa-solid fa-table-cells-large"></i></li></a>
+                    <a id="portfolio" href="gallery.html"><li><i class="fa-solid fa-user"></i></i></li></a>
+                    <a id="grid" href=""><li><i class="fa-solid fa-book"></i></i></li></a>
+                    <a id="profile" href="perfil.html"><li><i class="fa-solid fa-hashtag"></i></i></li></a>
                 </ul>
             </div>
 
             <div class="home">
-                <h1 id="title">Search any movie</h1>
-                <p>Unfortunately, at the moment we only have movies between 2002-2021</p>
+                <h1 id="title">Our Story</h1>
+                <p>Why did we start this company?</p>
+                <img src="MovieGramLogo-modified (2).png">
+                
+                <p id="description">Lorem ipsum dolor sit, 
+                    amet consectetur adipisicing elit. 
+                    Porro blanditiis omnis itaque tempora 
+                    error provident maxime nemo qui aperiam et 
+                    sit sint, quia quidem aliquam.
+                    fugiat est, quae adipisci dicta quidem molestias itaque? 
+                    Repellendus incidunt natus deleniti nesciunt. 
+                    Totam quas officia, corporis sequi quod dolorum 
+                    perferendis aspernatur fugiat itaque quam optio 
+                    aperiam cumque numquam voluptatem ipsum adipisci 
+
+                    <br><br>
+                    fugiat est, quae adipisci dicta quidem molestias itaque? 
+                    Repellendus incidunt natus deleniti nesciunt. 
+                    Totam quas officia, corporis sequi quod dolorum 
+                    perferendis aspernatur fugiat itaque quam optio 
+                    aperiam cumque numquam voluptatem ipsum adipisci 
+                </p>
 
                 <div class="left-arrow">
                     <a href="gallery.html"><i class="fa-solid fa-angle-left"></i></a>
                 </div>
 
-                <div class="search-bar-container" id="search-bar-container">
+                <!--div class="search-bar-container" id="search-bar-container">
                     <div class="search-bar">
-                        <input id="search-bar" type="text" name="search" placeholder="Search by word, name, year, etc ..." required autocomplete="off" onchange="showMovies()">
+                        <input id="search-bar" type="text" name="search" placeholder="Search by username ..." required autocomplete="off" onchange="showData()">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
-                    <div class="search-result-container" id="search-result-container">
+                    <div class="search-result-container" id="search-result-container">-->
                         <!--
                             name: demo
                             full_name: user/demo
@@ -48,7 +69,7 @@
                             <div class="left-content">
                                 <img src="https://avatars.githubusercontent.com/u/97603106?v=4">
                             </div>
-                            <div id="right-content" class="right-content">
+                            <div class="right-content">
                                 <p id="full-name">migueltorresvalls/demo-clases</p>
                                 <a href="" id="name">demo-clases</a>
                             </div>
