--- a/src/main/resources/static/inbox.html
+++ b/src/main/resources/static/inbox.html
@@ -21,6 +21,7 @@
                     <a id="portfolio" href="gallery.html"><li><i class="fa-solid fa-user"></i></i></li></a>
                     <a id="grid" href="search.html"><li><li><i class="fa-solid fa-book"></i></i></li></a>
                     <a id="profile" href="perfil.html"><li><i class="fa-solid fa-hashtag"></i></i></li></a>
+                    <a id="movies" href="movies.html"><li><i class="fa-solid fa-video"></i></li></a>
                 </ul>
             </div>
 
