--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,8 +20,9 @@
                     <a id="ho me" href=""><li><i class="fa-solid fa-bars"></i></li></a>
                     <a id="inbox" href="inbox.html"><li><i class="fa-solid fa-inbox"></i></li></a>
                     <a id="portfolio" href="gallery.html"><li><i class="fa-solid fa-user"></i></i></li></a>
-                    <a id="grid" href="search.html"><li><i class="fa-solid fa-book"></i></i></li></a>
-                    <a id="profile" href="perfil.html"><li><i class="fa-solid fa-hashtag"></i></i></li></a>
+                    <a id="grid" href="search.html"><li><i class="fa-solid fa-book"></i></li></a>
+                    <a id="profile" href="perfil.html"><li><i class="fa-solid fa-hashtag"></i></li></a>
+                    <a id="movies" href="movies.html"><li><i class="fa-solid fa-video"></i></li></a>
                 </ul>
             </div>
 
