--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -21,7 +21,7 @@
                     <a id="inbox" href="inbox.html"><li><i class="fa-solid fa-inbox"></i></li></a>
                     <a id="portfolio" href="gallery.html"><li><i class="fa-solid fa-user"></i></i></li></a>
                     <a id="grid" href=""><li><i class="fa-solid fa-book"></i></i></li></a>
-                    <a id="profile" href="perfil.html"><li><i class="fa-solid fa-hashtag"></i></i></li></a>
+                    <a id="profile" href="perfil2.html"><li><i class="fa-solid fa-hashtag"></i></i></li></a>
                     <a id="movies" href="movies.html"><li><i class="fa-solid fa-video"></i></li></a>
                 </ul>
             </div>
