--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,13 +11,13 @@
 
         <script src="C:\Users\mtorr\OneDrive - Universidad Pontificia Comillas\Escritorio\ICAI\3\Segundo Cuatri\PAT\Practicas\Practica 2\script.js"></script>
         <script src="https://kit.fontawesome.com/22ef74e242.js" crossorigin="anonymous"></script>
-        <title>Miguel Torres</title>
+        <title>Moviegram</title>
     </head>
     <body>
         <main>
             <div class="nav-menu">
                 <ul>
-                    <a id="home" href=""><li><i class="fa-solid fa-bars"></i></li></a>
+                    <a id="home" style="background: rgb(6, 113, 102);" href=""><li><i class="fa-solid fa-bars"></i></li></a>
                     <a id="inbox" href="inbox.html"><li><i class="fa-solid fa-inbox"></i></li></a>
                     <a id="portfolio" href="gallery.html"><li><i class="fa-solid fa-user"></i></i></li></a>
                     <a id="grid" href="search.html"><li><i class="fa-solid fa-book"></i></li></a>
@@ -42,7 +42,7 @@
         </main>
 
         <footer>
-            <p>Created by: Miguel Torres @ 14/02/2023</p>
+            <p>Moviegram @ 21/05/2023</p>
         </footer>
     </body>
 </html>
