--- a/src/main/resources/static/search.html
+++ b/src/main/resources/static/search.html
@@ -11,7 +11,7 @@
 
         <script type="text/javascript" src="search.js"></script>
         <script src="https://kit.fontawesome.com/22ef74e242.js" crossorigin="anonymous"></script>
-        <title>Miguel Torres</title>
+        <title>Moviegram</title>
     </head>
     <body>
         <main>
@@ -31,23 +31,21 @@
                 <p>Why did we start this company?</p>
                 <img src="MovieGramLogo-modified (2).png">
                 
-                <p id="description">Lorem ipsum dolor sit, 
-                    amet consectetur adipisicing elit. 
-                    Porro blanditiis omnis itaque tempora 
-                    error provident maxime nemo qui aperiam et 
-                    sit sint, quia quidem aliquam.
-                    fugiat est, quae adipisci dicta quidem molestias itaque? 
-                    Repellendus incidunt natus deleniti nesciunt. 
-                    Totam quas officia, corporis sequi quod dolorum 
-                    perferendis aspernatur fugiat itaque quam optio 
-                    aperiam cumque numquam voluptatem ipsum adipisci 
+                <p id="description">Somos Miguel Torres y Esther Usera, dos amantes 
+                    del mundo del cine y de la música. Nuestra idea al crear 
+                    esta página web fue combinar estos dos mundos en uno. 
+                    Con MovieGram, los usuarios tiene la capacidad de buscar 
+                    todas las películas que deseen y que les gusten, y construir unas 
+                    'movieLists' almacenando en cada 'movieList' creada las películas que quieran.
+
 
                     <br><br>
-                    fugiat est, quae adipisci dicta quidem molestias itaque? 
-                    Repellendus incidunt natus deleniti nesciunt. 
-                    Totam quas officia, corporis sequi quod dolorum 
-                    perferendis aspernatur fugiat itaque quam optio 
-                    aperiam cumque numquam voluptatem ipsum adipisci 
+                    Esta aplicación está dirigida hacia todos los amantes de 
+                    la cinematografía, al igual que dirigida
+                     a todos los que quieran aprender sobre el mundo del cine. 
+                     ¡Esperamos que les guste MovieGram tanto como a nosotros, 
+                     y que aprendan más sobre el mundo del cine!
+
                 </p>
 
                 <div class="left-arrow">
@@ -83,7 +81,7 @@
         </main>
 
         <footer>
-            <p>Created by: Miguel Torres @ 14/02/2023</p>
+            <p>Moviegram @ 21/05/2023</p>
         </footer>
     </body>
 </html>
