--- a/src/main/resources/static/movies.html
+++ b/src/main/resources/static/movies.html
@@ -10,7 +10,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
 
         <script src="https://kit.fontawesome.com/22ef74e242.js" crossorigin="anonymous"></script>
-        <title>Miguel Torres</title>
+        <title>Moviegram</title>
     </head>
     <body>
         <main>
@@ -62,7 +62,7 @@
         </main>
 
         <footer>
-            <p>Created by: Miguel Torres @ 14/02/2023</p>
+            <p>Moviegram @ 21/05/2023</p>
         </footer>
 
         <script>
